--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,42 @@
 </head>
 
 <body>
-
+    <section id="main">
+        <h1>Leader boards</h1>
+        <div class="card">
+            <div class="score-container">
+                <div class="recent-scores-title">
+                    <h2 class="recent-title">Recent scores</h2>
+                    <button class="btn-refresh">Refresh</button>
+                </div>
+                <ul class="score-list">
+                    <li class="score-item bg-light">
+                        <p class="score-description">Name : ABC</p>
+                    </li>
+                    <li class="score-item">
+                        <p class="score-description">Name : BCD</p>
+                    </li>
+                    <li class="score-item bg-light">
+                        <p class="score-description">Name : DEF</p>
+                    </li>
+                    <li class="score-item">
+                        <p class="score-description">Name : DEF</p>
+                    </li>
+                    <li class="score-item bg-light">
+                        <p class="score-description">Name : DEF</p>
+                    </li>
+                </ul>
+            </div>
+            <div class="form-container">
+                <h2 class="center">Add your scores</h2>
+                <form class="add-score-form">
+                    <input type="text" class="score-input">
+                    <input type="text" class="score-input my-10">
+                    <button class="btn-submit">Submit</button>
+                </form>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
