--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,8 @@
             <div class="form-container">
                 <h2 class="center">Add your scores</h2>
                 <form class="add-score-form">
-                    <input type="text" id="user" placeholder="username" class="score-input">
-                    <input type="number" id="score" placeholder="score" class="score-input my-10">
+                    <input type="text" required id="user" placeholder="username" class="score-input">
+                    <input type="number" required id="score" placeholder="score" class="score-input my-10">
                     <p class="process none"></p>
                     <p class="success none"></p>
                     <p class="error none"></p>
