--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <section id="main">
-        <h1 class="white">Leader boards</h1>
+        <h1 class="white">Leader board</h1>
         <div class="card">
             <div class="score-container">
                 <div class="recent-scores-title">
